tests/fixtures/svs-v3/invalid/unknown-core-tlv.hex
2451064f071508036e646e080b7376732d76332d746573743601031400150dc90bfdf00007756e6b6e6f776e16031b010017200c629eecae9561615844e6943952e8dea563de0e2f4adfd111d425a84b934cb4
